--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<html>
+<body>
+<main>
+<h1>SITE SOBRE JOGOS BM LEGAIS</h1>
+<section>
+<h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
+</section>
 
+</main>
+</body>
+</html>
