--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <h1>SITE SOBRE JOGOS BM LEGAIS</h1>
 <section>
 <h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
-<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.aureusuniversity.com%2F35-jogos-para-jogar-com-amigos-online-174591.html&psig=AOvVaw0eXfloKJ7epi7tr2hR1i5A&ust=1707397561547000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKCxo9ulmYQDFQAAAAAdAAAAABAG"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.aureusuniversity.com%2F35-jogos-para-jogar-com-amigos-online-174591.html&psig=AOvVaw0eXfloKJ7epi7tr2hR1i5A&ust=1707397561547000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKCxo9ulmYQDFQAAAAAdAAAAABAG" alt="jogos legais."></a>
-</section>
-
+<a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  
 </main>
 </body>
 </html>
