--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>SITE SOBRE JOGOS BM LEGAIS</h1>
 <section>
 <h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
-<a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+<a><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."></a>
   
 </main>
 </body>
