--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>SITE SOBRE JOGOS BM LEGAIS</h1>
 <section>
 <h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
-<a><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."></a>
+<center></center><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."> width="520" height="320" </center>
   
 </main>
 </body>
