--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <h1>SITE SOBRE JOGOS BM LEGAIS</h1>
 <section>
 <h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
-<center></center><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."> width="520" height="320" </center>
-  
+<center></center><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."> </center>
+  <h1>Lista de melhors jogos!</h1>
+<ol>
+<li> mortal kombat 923 </li>
+<li> counter strike 3</li>
+<li> desgraça caotica</li>
+<li> matheus é gay RP</li>
+<li> parei o tempo e roubei o banco</li>
+
+
+</ol>
 </main>
 </body>
 </html>
