--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <body>
 <main>
 <h1>SITE SOBRE JOGOS BM LEGAIS</h1>
-<section>
+
+  
 <h2>Jogos legais para jogar com amigos ou sozinho se voce for um bosta</h2>
 <center></center><img src="https://s.zst.com.br/cms-assets/2022/09/brawl-star.webp" alt="JOgos massa."> </center>
-  <h1>Lista de melhors jogos!</h1>
-<ol>
+<h1>Lista de melhors jogos!</h1>
+<section>
+
+  <ol>
 <li> mortal kombat 923 </li>
 <li> counter strike 3</li>
 <li> desgraça caotica</li>
 <li> matheus é gay RP</li>
 <li> parei o tempo e roubei o banco</li>
 
-
 </ol>
+  </section>
 </main>
 </body>
 </html>
