--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <section>
 
   <ol>
-<li> mortal kombat 923 </li>
-<li> counter strike 3</li>
-<li> desgraça caotica</li>
-<li> matheus é gay RP</li>
-<li> parei o tempo e roubei o banco</li>
+
+    <li><font size="20">mortal kombat 923 </li>
+<li><font size="20">counter strike 3</li>
+<li><font size="20">desgraça caotica</li>
+<li><font size="20">matheus é gay RP</li>
+<li><font size="20">parei o tempo e roubei o banco</li>
 
 </ol>
   </section>
